--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,10 +1,103 @@
-<div class="container">
-  <h1>Hello, Bootstrap!</h1>
-  <p>This is a test page to check if Bootstrap is working in your Ruby project.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Website</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+</head>
+<body>
+<div class="container-fluid">
+  <div class="row">
+    <!-- Бокове меню -->
 
-  <div class="alert alert-primary" role="alert">
-    This is a Bootstrap alert!
+    <nav class="col-md-3 col-lg-2 d-lg-block sidebar">
+      <div class="container-fluid">
+        <div class="position-sticky">
+          <a class="mb-lg-auto mt-lg-4">
+            <span class="bg-dark-2 rounded-pill p-2 mb-lg-1 d-none d-lg-inline-block mt-lg-4">
+              <img class="rounded-pill d-block img-fluid" src="logo.jpg" alt="ava" width="160" height="160">
+            </span>
+          </a>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">What I Do</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Resume</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Testimonial</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Навігаційний бар для екранів до 768 пікселів -->
+    <nav class="mobile navbar navbar-expand-lg">
+      <h1 class="text-5 text-white text-center mb-0 d-lg-block">Svitlana Lyzanets</h1>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbar-toggler">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Головна <span class="sr-only">(Поточна)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-toggle="collapse" href="#collapseAbout">Про нас</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Послуги</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Контакти</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Контент акордеону для екранів до 768 пікселів -->
+    <div class="collapse" id="collapseAbout">
+      <div class="card card-body">
+        <p>Тут може бути ваш контент "Про нас".</p>
+      </div>
+    </div>
+
+
+
+    <!-- Зміст сторінки -->
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+    </main>
   </div>
-
-  <button type="button" class="btn btn-primary">Bootstrap Button</button>
 </div>
+
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+<script src="home.js"></script>
+</body>
+</html>
