--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Website</title>
+  <link rel="stylesheet" href="css/home.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
@@ -12,82 +14,111 @@
 <div class="container-fluid">
   <div class="row">
     <!-- Бокове меню -->
-
-    <nav class="col-md-3 col-lg-2 d-lg-block sidebar">
+    <nav class="col-md-2 d-lg-block sidebar">
       <div class="container-fluid">
         <div class="position-sticky">
-          <a class="mb-lg-auto mt-lg-4">
-            <span class="bg-dark-2 rounded-pill p-2 mb-lg-1 d-none d-lg-inline-block mt-lg-4">
-              <img class="rounded-pill d-block img-fluid" src="logo.jpg" alt="ava" width="160" height="160">
-            </span>
-          </a>
+          <div class="container">
+            <div class="row justify-content-center">
+              <a class="mb-lg-auto mt-lg-4">
+                <span class="bg-dark-2 rounded-pill p-2 mb-lg-1 d-none d-lg-inline-block mt-lg-4">
+                  <img class="rounded-pill d-block border-solid" src="logo.jpg" alt="ava" width="160" height="160">
+                </span>
+              </a>
+            </div>
+          </div>
+
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Me</a>
+              <a class="nav-link" href="#about-me">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">What I Do</a>
+              <a class="nav-link" href="#what-i-do">What I Do</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Resume</a>
+              <a class="nav-link" href="#resume">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Testimonial</a>
+              <a class="nav-link" href="#testimonial">Testimonial</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="centered-container">
+            <div class="social-icons mt-3 footer">
+              <a href="https://www.facebook.com/profile.php?id=100010096574579" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://instagram.com/svitlana_designer__?igshid=MzRlODBiNWFlZA==" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="https://twitter.com/yourpage" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
         </div>
       </div>
     </nav>
 
     <!-- Навігаційний бар для екранів до 768 пікселів -->
-    <nav class="mobile navbar navbar-expand-lg">
+    <nav class="mobile navbar navbar-expand-lg navbar navbar-dark bg-dark">
       <h1 class="text-5 text-white text-center mb-0 d-lg-block">Svitlana Lyzanets</h1>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/profile.php?id=100010096574579" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://instagram.com/svitlana_designer__?igshid=MzRlODBiNWFlZA==" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/yourpage" target="_blank"><i class="fab fa-twitter"></i></a>
+      </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Головна <span class="sr-only">(Поточна)</span></a>
+            <a class="nav-link" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#collapseAbout">Про нас</a>
+            <a class="nav-link" href="#about-me">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Послуги</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Контакти</a>
+            <a class="nav-link" href="#what-i-do">What I Do</a>
           </li>
         </ul>
       </div>
     </nav>
 
-    <!-- Контент акордеону для екранів до 768 пікселів -->
-    <div class="collapse" id="collapseAbout">
-      <div class="card card-body">
-        <p>Тут може бути ваш контент "Про нас".</p>
-      </div>
-    </div>
-
-
-
     <!-- Зміст сторінки -->
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-    </main>
+    <div class="col-md-10 ms-sm-auto pl-0 pr-0 desktop">
+      <%= render partial: "shared/desktop_first_section" %>
+      <%= render partial: "shared/desktop_about_me_section" %>
+      <%= render partial: "shared/desktop_wha_i_do_section" %>
+      <%= render partial: "shared/desktop_resume_section" %>
+      <%= render partial: "shared/desktop_portfolio_section" %>
+      <%= render partial: "shared/desktop_testimonial_section" %>
+      <%= render partial: "shared/desktop_contact_section" %>
+
+    </div>
   </div>
 </div>
 
 
+<script>
+  // Функція прокрутки до останньої секції
+  function scrollToLastSection() {
+    const lastSection = document.getElementById('contact');
+    lastSection.scrollIntoView({ behavior: 'smooth' });
+  }
+
+  // Отримуємо кнопку "Scroll to the last section"
+  const scrollButton = document.querySelector('.scroll-btn');
+
+  // Додаємо обробник події для кнопки
+  scrollButton.addEventListener('click', scrollToLastSection);
+</script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -98,6 +129,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-<script src="home.js"></script>
+<script src="homes/home.js"></script>
+<!-- Підключення бібліотеки Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 </body>
 </html>
