--- a/app/views/shared/_desktop_first_section.html.erb
+++ b/app/views/shared/_desktop_first_section.html.erb
@@ -2,6 +2,12 @@
   <h1 class="text-center">Welcome</h1>
   <h2 class="text-center">My name is Svitlana</h2>
   <h2 class="text-center">I'm designer</h2>
+  <div class="wrapper">
+    <div class="centeredBox">
+      <span id="typewriter" data-array=""></span>
+      <span class="cursor"></span>
+    </div>
+  </div>
   <div class="text-center">
     <button class="scroll-btn">Hire Me</button>
   </div>
