--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -6,6 +6,7 @@
   <title>My Website</title>
   <!-- Додайте цей тег у ваш head -->
   <%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'testimonial', media: 'all', 'data-turbolinks-track': 'reload' %>
 
   <!-- Додайте цей тег перед </body> -->
   <%= javascript_include_tag 'home', 'data-turbolinks-track': 'reload' %>
