--- a/app/views/shared/_desktop_contact_section.html.erb
+++ b/app/views/shared/_desktop_contact_section.html.erb
@@ -1,7 +1,63 @@
 <section id="contact" style="height: 1060px;" class="section-contact">
   <div class="container">
-    <h1 class="text-center fw-bold text-9 pb-110px">Contact</h1>
+    <h1 class="text-center fw-bold text-9 pb-110px">Get in Touch</h1>
     <div class="know-me-more-line"></div>
-    <div class="row"></div>
+    <div class="row pb-110px">
+      <div class="col-md-4 col-xl-3 text-center text-md-start">
+        <h2 class="mb-3 text-5 text-uppercase">Address</h2>
+        <p class="mb-4">
+          4th Floor, Plot No.22,
+          <br>
+          145 Murphy Canyon Rd.
+          <br>
+          San Diego CA 2028
+        </p>
+        <p class="mb-1">
+          <span class="text-primary me-2">
+            <i class="fas fa-phone-alt"></i>
+          </span>
+          (060) 444 434 444
+        </p>
+        <p class="mb-1">
+          <span class="text-primary me-2">
+            <i class="fas fa-fax"></i>
+          </span>
+          (060) 444 434 444
+        </p>
+        <p class="mb-4">
+          <span class="text-primary me-2">
+            <i class="fas fa-envelope"></i>
+          </span>
+          (060) 444 434 444
+        </p>
+        <h2 class="mb-3 text-5 text-uppercase">Follow Me</h2>
+        <ul class="social-icons social-icons-lg social-icons-colored justify-content-center" style="list-style: none; padding: 0;">
+          <li class="social-icons-facebook">
+            <a href="http://www.facebook.com/" target="_blank" title="Facebook">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+          <li class="social-icons-twitter">
+            <a href="http://www.twitter.com/" target="_blank" title="Twitter">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li class="social-icons-linkedin">
+            <a href="http://www.linkedin.com/" target="_blank" title="Linkedin">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li class="social-icons-instagram">
+            <a href="http://www.instagram.com/" target="_blank" title="Instagram">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-md-8 col-xl-9 order-0 order-md-1">
+        <h2 class="mb-3 text-5 text-uppercase text-center text-md-start text-white">Send us a note</h2>
+      </div>
+    </div>
   </div>
 </section>
