--- a/app/views/shared/_desktop_contact_section.html.erb
+++ b/app/views/shared/_desktop_contact_section.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1 class="text-center fw-bold text-9 pb-110px">Get in Touch</h1>
     <div class="know-me-more-line"></div>
-    <div class="row pb-110px">
+    <div class="row pt-120px">
       <div class="col-md-4 col-xl-3 text-center text-md-start">
         <h2 class="mb-3 text-5 text-uppercase">Address</h2>
         <p class="mb-4">
