--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -6,6 +6,10 @@ body {
   color: #E2FE16;
 }
 
+p {
+  line-height: 1.5;
+}
+
 .back-home-color {
   background-color: #E2FE16;
 }
@@ -301,4 +305,15 @@ body {
 .section-contact {
   background-color: #282828!important;
   color: white;
+}
+
+.language-select {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.flag {
+  cursor: pointer;
 }
