--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -10,6 +10,7 @@
 
   <!-- Додайте цей тег перед </body> -->
   <%= javascript_include_tag 'home', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'locale', 'data-turbolinks-track': 'reload' %>
 
   <!-- Підключення бібліотеки Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -23,6 +24,19 @@
     <!-- Бокове меню -->
     <nav class="col-md-2 d-lg-block sidebar">
       <div class="container-fluid">
+
+        <!-- Приклад вибору мови з флагами -->
+        <div id="language-select" class="language-select">
+          <div class="flag" onclick="changeLanguage('en')">
+            <img src="en.svg.png" alt="English Flag" width="30" height="20" />
+          </div>
+          <div class="flag" onclick="changeLanguage('uk')">
+            <img src="ukr.svg.png" alt="Український Прапор" width="30" height="20" />
+          </div>
+          <div class="flag" onclick="changeLanguage('sk')">
+            <img src="sk.png" alt="Slovak Flag" width="30" height="20" />
+          </div>
+        </div>
         <div class="position-sticky">
           <div class="container">
             <div class="row justify-content-center">
@@ -36,27 +50,28 @@
 
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#home">Home</a>
+              <a class="nav-link active" href="#home" data-lang-key="home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about-me">About Me</a>
+              <a class="nav-link" href="#about-me" data-lang-key="about_me">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#what-i-do">What I Do</a>
+              <a class="nav-link" href="#what-i-do" data-lang-key="what_i_do">What I Do</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#resume">Resume</a>
+              <a class="nav-link" href="#resume" data-lang-key="resume">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Portfolio</a>
+              <a class="nav-link" href="#portfolio" data-lang-key="portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#testimonial">Testimonial</a>
+              <a class="nav-link" href="#testimonial" data-lang-key="testimonial">Testimonial</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#contact" data-lang-key="contact">Contact</a>
             </li>
           </ul>
+
         </div>
       </div>
       <div class="container">
@@ -130,9 +145,6 @@
 
 
 
-<!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"-->
-<!--        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"-->
-<!--        crossorigin="anonymous"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
@@ -140,7 +152,5 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
 </body>
 </html>
