--- a/app/views/shared/_desktop_first_section.html.erb
+++ b/app/views/shared/_desktop_first_section.html.erb
@@ -1,8 +1,9 @@
 <section id="home" style="height: 1060px; background-image: url('back1.jpg'); background-size: cover; background-position: center;" class="section-1">
-  <h1 class="text-center">Welcome</h1>
-  <div class="text-center typewriter-text font-size fw-bold"></div>
-  <h3 class="text-center pt-2">based in Los Angeles, California.</h3>
+  <h1 class="text-center" id="welcome-heading" data-lang-key="welcome_heading">Welcome</h1>
+  <div class="text-center typewriter-text font-size fw-bold" lang="en"></div>
+  <h3 class="text-center pt-2" id="welcome-subheading" data-lang-key="welcome_subheading">Thanks for visiting!</h3>
   <div class="text-center">
     <button class="scroll-btn">Hire Me</button>
   </div>
 </section>
+
