--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -7,6 +7,7 @@
   <!-- Додайте цей тег у ваш head -->
   <%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= stylesheet_link_tag 'testimonial', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'portfolio', media: 'all', 'data-turbolinks-track': 'reload' %>
 
   <!-- Додайте цей тег перед </body> -->
   <%= javascript_include_tag 'home', 'data-turbolinks-track': 'reload' %>
@@ -21,72 +22,7 @@
 <body>
 <div class="container-fluid">
   <div class="row">
-    <!-- Бокове меню -->
-    <nav class="col-md-2 d-lg-block sidebar">
-      <div class="container-fluid">
-
-        <!-- Приклад вибору мови з флагами -->
-        <div id="language-select" class="language-select">
-          <div class="flag" onclick="changeLanguage('en')">
-            <img src="en.svg.png" alt="English Flag" width="30" height="20" />
-          </div>
-          <div class="flag" onclick="changeLanguage('uk')">
-            <img src="ukr.svg.png" alt="Український Прапор" width="30" height="20" />
-          </div>
-          <div class="flag" onclick="changeLanguage('sk')">
-            <img src="sk.png" alt="Slovak Flag" width="30" height="20" />
-          </div>
-        </div>
-        <div class="position-sticky">
-          <div class="container">
-            <div class="row justify-content-center">
-              <a class="mb-lg-auto mt-lg-4">
-                <span class="bg-dark-2 rounded-pill p-2 mb-lg-1 d-none d-lg-inline-block mt-lg-4">
-                  <img class="rounded-pill d-block border-solid" src="logo.jpg" alt="ava" width="160" height="160">
-                </span>
-              </a>
-            </div>
-          </div>
-
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" href="#home" data-lang-key="home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about-me" data-lang-key="about_me">About Me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#what-i-do" data-lang-key="what_i_do">What I Do</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#resume" data-lang-key="resume">Resume</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#portfolio" data-lang-key="portfolio">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#testimonial" data-lang-key="testimonial">Testimonial</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact" data-lang-key="contact">Contact</a>
-            </li>
-          </ul>
-
-        </div>
-      </div>
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="centered-container">
-            <div class="social-icons mt-3 footer">
-              <a href="https://www.facebook.com/profile.php?id=100010096574579" target="_blank"><i class="fab fa-facebook"></i></a>
-              <a href="https://instagram.com/svitlana_designer__?igshid=MzRlODBiNWFlZA==" target="_blank"><i class="fab fa-instagram"></i></a>
-              <a href="https://twitter.com/yourpage" target="_blank"><i class="fab fa-twitter"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </nav>
-
+    <%= render partial: "shared/desktop_sidebar_html" %>
     <!-- Навігаційний бар для екранів до 768 пікселів -->
     <nav class="mobile navbar navbar-expand-lg navbar navbar-dark bg-dark">
       <h1 class="text-5 text-white text-center mb-0 d-lg-block">Svitlana Lyzanets</h1>
@@ -101,20 +37,43 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#home">Home</a>
+            <a class="nav-link" href="#home-mobile">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about-me">About Me</a>
+            <a class="nav-link" href="#about-me-mobile">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#what-i-do">What I Do</a>
+            <a class="nav-link" href="#what-i-do-mobile">What I Do</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#resume-mobile">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#portfolio-mobile">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#testimonial">Testimonial</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
 
     <!-- Зміст сторінки -->
+    <div class="col-md-12 ms-sm-auto pl-0 pr-0 mobile">
+      <%= render partial: "shared/mobile_first_section" %>
+      <%= render partial: "shared/mobile_about_me_section" %>
+      <%= render partial: "shared/mobile_wha_i_do_section" %>
+      <%= render partial: "shared/mobile_resume_section" %>
+      <%= render partial: "shared/mobile_portfolio_section" %>
+      <%= render partial: "shared/mobile_testimonial_section" %>
+      <%= render partial: "shared/mobile_contact_section" %>
+    </div>
+
     <div class="col-md-10 ms-sm-auto pl-0 pr-0 desktop">
+      <%= render partial: "shared/mobile_first_section" %>
       <%= render partial: "shared/desktop_first_section" %>
       <%= render partial: "shared/desktop_about_me_section" %>
       <%= render partial: "shared/desktop_wha_i_do_section" %>
