--- a/app/views/shared/_mobile_portfolio_section.html.erb
+++ b/app/views/shared/_mobile_portfolio_section.html.erb
@@ -1,4 +1,4 @@
-<section id="portfolio" style="height: 1060px;" class="section-resume">
+<section id="portfolio-mobile" style="height: 1460px;" class="section-resume">
   <div class="container">
     <h1 class="text-center fw-bold text-9 pb-110px">Portfolio</h1>
     <div class="know-me-more-line"></div>
