--- a/app/views/shared/_mobile_contact_section.html.erb
+++ b/app/views/shared/_mobile_contact_section.html.erb
@@ -1,4 +1,4 @@
-<section id="contact" style="height: 760px;" class="section-contact">
+<section id="contact-mobile" style="height: 760px;" class="section-contact">
   <div class="container">
     <h1 class="text-center fw-bold text-9 pb-110px">Get in Touch</h1>
     <div class="know-me-more-line"></div>
