--- a/app/views/shared/_desktop_sidebar_html.erb
+++ b/app/views/shared/_desktop_sidebar_html.erb
@@ -42,7 +42,7 @@
           <a class="nav-link" href="#portfolio" data-lang-key="portfolio">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#testimonial" data-lang-key="testimonial">Testimonial</a>
+          <a class="nav-link" href="#testimonial-desktop" data-lang-key="testimonial">Testimonial</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact" data-lang-key="contact">Contact</a>
