--- a/app/views/shared/_desktop_about_me_section.html.erb
+++ b/app/views/shared/_desktop_about_me_section.html.erb
@@ -1,24 +1,26 @@
 <section id="about-me" class="section-about-me" style="height: 800px;">
   <div class="container">
-    <h1 class="text-center fw-bold text-9 pb-110px">Know Me More</h1>
+    <h1 class="text-center know-me-more text-9 pb-110px">Know Me More</h1>
     <div class="know-me-more-line"></div>
     <div class="row">
       <!-- Ліва колонка -->
-      <div class="col-lg-7 col-xl-8 text-left pt-120px">
-        <h2 class="fw-bold">I'm <span class="home-color">Svitlana Lyzanets,</span> a Web Developer</h2>
-        <p class="text-white-50">I help you build brand for your business at an affordable price. Thousands of clients have procured exceptional results while working with our dedicated team. when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <p class="text-white-50">Delivering work within time and budget which meets client’s requirements is our moto. Lorem Ipsum has been the industry's standard dummy text ever when an unknown printer took a galley.</p>
+      <div class="col-lg-7 col-xl-8 text-left mt-120px">
+        <h2 class="know-me-more-h2">I'm <span class="home-color">Svitlana Lyzanets,</span> a Web Developer</h2>
+        <p class="know-me-more-text">
+          I am a designer with a fervent ambition to change the world through creativity. I always strive to develop designs that not only aesthetically attract but are also highly user-friendly and intuitively understandable for users. My goal is to transform your ideas into digital reality and assist you in achieving maximum success in your industry. Take a look at my works, and don't hesitate to reach out to me to embark on incredible projects together.
+        </p>
       </div>
 
       <!-- Права колонка -->
-      <div class="col-lg-5 col-xl-4 pt-120px ">
+      <div class="col-lg-5 col-xl-4 mt-120px ">
         <p class="section-divider"><b>Name:</b> Simone Olivia</p>
         <p class="section-divider"><b>Email:</b> <a href="mailto:svitlanalyzanets@gmail.com" class="home-color">svitlanalyzanets@gmail.com</a></p>
         <p class="section-divider"><b>Age:</b> 28</p>
         <p class="section-divider"><b>From:</b> Los Angeles, California</p>
         <div class="pt-4"></div>
-        <!-- Додано кнопку для завантаження резюме -->
-        <a href="Mykola_Lyzanets_CV.pdf" target="_blank" class="download-btn rounded-pill back-home-color">Download CV</a>
+        <a href="Mykola_Lyzanets_CV.pdf" target="_blank" class="download-btn rounded-pill back-home-color">CV</a>
+        <span>&nbsp;</span>
+        <a href="Mykola_Lyzanets_CV.pdf" target="_blank" class="download-btn rounded-pill back-home-color">Certificate</a>
       </div>
     </div>
   </div>
