--- a/app/views/shared/_desktop_portfolio_section.html.erb
+++ b/app/views/shared/_desktop_portfolio_section.html.erb
@@ -1,53 +1,48 @@
-<section id="portfolio" style="height: 1060px;" class="section-resume">
+<section id="portfolio" style="height: 4000px;" class="section-resume">
   <div class="container">
     <h1 class="text-center fw-bold text-9 pb-110px">Portfolio</h1>
     <div class="know-me-more-line"></div>
-    <div class="row pt-120px">
-      <figure class="snip0078 blue">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample4.jpg" alt="sampl45" />
-        <figcaption>
-          <h2>Mark <span>Twain</span></h2>
-          <p>Go to Heaven for the climate, Hell for the company.</p>
-        </figcaption>
-        <a href="#"></a>
-      </figure>
-      <figure class="snip0078 red"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample7.jpg" alt="sample50" />
-        <figcaption>
-          <h2>Steven <span>Wright</span></h2>
-          <p>You can't have everything... where would you put it?</p>
-        </figcaption>
-        <a href="#"></a>
-      </figure>
-      <figure class="snip0078 yellow"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample6.jpg" alt="sample46" />
-        <figcaption>
-          <h2>Arthur C. <span> Clarke</span></h2>
-          <p>There is hopeful symbolism in the fact that flags do not wave in a vacuum.</p>
-        </figcaption>
-        <a href="#"></a>
-      </figure>
-      <figure class="snip0078 blue">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample4.jpg" alt="sampl45" />
-        <figcaption>
-          <h2>Mark <span>Twain</span></h2>
-          <p>Go to Heaven for the climate, Hell for the company.</p>
-        </figcaption>
-        <a href="#"></a>
-      </figure>
-      <figure class="snip0078 red"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample7.jpg" alt="sample50" />
-        <figcaption>
-          <h2>Steven <span>Wright</span></h2>
-          <p>You can't have everything... where would you put it?</p>
-        </figcaption>
-        <a href="#"></a>
-      </figure>
-      <figure class="snip0078 yellow"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample6.jpg" alt="sample46" />
-        <figcaption>
-          <h2>Arthur C. <span> Clarke</span></h2>
-          <p>There is hopeful symbolism in the fact that flags do not wave in a vacuum.</p>
-        </figcaption>
-        <a href="#"></a>
-      </figure>
+    <div class="row mt-120px border-around">
+      <h4>LANDING PAGE</h4>
+      <p class="color-inside">#barbeshop#jasajbarber</p>
+      <div class="border-inside">
+        <img class="full-width-image" src="1.png">
+      </div>
     </div>
+
+    <div class="row mt-120px border-around">
+      <h4>MULTI-PAGE WEBSITE</h4>
+      <p class="color-inside">#website#transformational#practices</p>
+      <div class="border-inside">
+        <img class="full-width-image" src="2.png">
+      </div>
+    </div>
+
+    <div class="row mt-120px border-around">
+      <h4>LANDING PAGE</h4>
+      <p class="color-inside">#school#slovakia</p>
+      <div class="border-inside">
+        <img class="full-width-image" src="3.png">
+      </div>
+    </div>
+
+    <div class="row mt-120px border-around">
+      <h4>MULTI-PAGE WEBSITE</h4>
+      <p class="color-inside">#tattoo#studio</p>
+      <div class="border-inside">
+        <img class="full-width-image" src="4.png">
+      </div>
+    </div>
+
+    <div class="row mt-120px border-around">
+      <h4>MULTI-PAGE WEBSITE</h4>
+      <p class="color-inside">#restaruant</p>
+      <div class="border-inside">
+        <img class="full-width-image" src="5.png">
+      </div>
+    </div>
+
+
   </div>
 
 
