--- a/app/views/shared/_mobile_about_me_section.html.erb
+++ b/app/views/shared/_mobile_about_me_section.html.erb
@@ -4,14 +4,14 @@
     <div class="know-me-more-line"></div>
     <div class="row">
       <!-- Ліва колонка -->
-      <div class="col-lg-7 col-xl-8 text-left pt-120px">
+      <div class="col-lg-7 col-xl-8 text-left mt-120px">
         <h2 class="fw-bold">I'm <span class="home-color">Svitlana Lyzanets,</span> a Web Developer</h2>
         <p class="text-white-50">I help you build brand for your business at an affordable price. Thousands of clients have procured exceptional results while working with our dedicated team. when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <p class="text-white-50">Delivering work within time and budget which meets client’s requirements is our moto. Lorem Ipsum has been the industry's standard dummy text ever when an unknown printer took a galley.</p>
       </div>
 
       <!-- Права колонка -->
-      <div class="col-lg-5 col-xl-4 pt-120px ">
+      <div class="col-lg-5 col-xl-4 mt-120px ">
         <p class="section-divider"><b>Name:</b> Simone Olivia</p>
         <p class="section-divider"><b>Email:</b> <a href="mailto:svitlanalyzanets@gmail.com" class="home-color">svitlanalyzanets@gmail.com</a></p>
         <p class="section-divider"><b>Age:</b> 28</p>
