--- a/app/views/shared/_mobile_first_section.html.erb
+++ b/app/views/shared/_mobile_first_section.html.erb
@@ -1,4 +1,4 @@
-<section id="home-mobile" style="height: 860px; background-image: url('back1.jpg'); background-size: cover; background-position: center;" class="section-mobile pt-120px">
+<section id="home-mobile" style="height: 860px; background-image: url('back1.jpg'); background-size: cover; background-position: center;" class="section-mobile mt-120px">
   <h1 class="text-center" id="welcome-mobile" data-lang-key="welcome_heading">Welcome</h1>
   <div class="text-center typewriter-text-mobile font-size-40 fw-bold" lang="en"></div>
   <h3 class="text-center pt-2" id="welcome2-mobile" data-lang-key="welcome_subheading">Thanks for visiting!</h3>
