--- a/app/assets/stylesheets/testimonial.css
+++ b/app/assets/stylesheets/testimonial.css
@@ -55,10 +55,8 @@
 .testimonial {
   min-height: 375px;
   position: relative;
-  background: url(https://i.ibb.co/PTJDkgb/testimonials.jpg);
   padding-bottom: 50px;
-  background-position: center;
-  background-size: cover;
+  background-color: #000!important;
 }
 #testimonial4 .carousel-inner:hover{
   cursor: -moz-grab;
