--- a/app/views/shared/_desktop_first_section.html.erb
+++ b/app/views/shared/_desktop_first_section.html.erb
@@ -1,9 +1,11 @@
-<section id="home" style="height: 1060px; background-image: url('back1.jpg'); background-size: cover; background-position: center;" class="section-1">
-  <h1 class="text-center" id="welcome-heading" data-lang-key="welcome_heading">Welcome</h1>
-  <div class="text-center typewriter-text font-size fw-bold" lang="en"></div>
-  <h3 class="text-center pt-2" id="welcome-subheading" data-lang-key="welcome_subheading">Thanks for visiting!</h3>
-  <div class="text-center">
-    <button class="scroll-btn">Hire Me</button>
+<section id="home" style="height: 1060px; background-color: #000; background-size: cover;" class="section-1">
+  <div class="container">
+    <h1 class="text-center typewriter-text first-section" lang="en">Design that Changes Everything: I'll Bring Your Ideas to Life and Help You Become Leaders in Your Industry.</h1>
+    <img src="first-section.png" style="width: 100%;">
+    <div class="text-center text-first-section mt-5" style="display: flex; align-items: center; justify-content: space-between;">
+      Design that Changes Everything: I'll Bring Your Ideas to Life and Help You Become Leaders in Your Industry.
+      <button class="scroll-btn">Hire Me</button>
+    </div>
+
   </div>
 </section>
-
