--- a/app/views/shared/_desktop_wha_i_do_section.html.erb
+++ b/app/views/shared/_desktop_wha_i_do_section.html.erb
@@ -1,71 +1,97 @@
-<section id="what-i-do" style="height: 600px;" class="section-what-i-do">
+<section id="what-i-do" style="height: 1000px;" class="section-what-i-do">
   <div class="container">
-    <h1 class="text-center fw-bold text-9 pb-110px">What I Do?</h1>
+    <h1 class="text-center know-me-more pb-110px">What services do I provide?</h1>
     <div class="know-me-more-line"></div>
-    <div class="row">
-      <!-- Зліва зображення, справа текст -->
-      <div class="col-md-6 pb-5 pt-120px">
-        <div class="d-flex">
-          <img src="icon.png" alt="Left Image" class="img-fluid mr-3 img-size">
-          <div>
-            <h3 class="text-white">Graphic Design</h3>
-            <p class="mb-0 text-white-50">Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
-          </div>
-        </div>
-      </div>
+    <div class="container-service">
+       <div class="row">
+         <div class="col-md-12 row-service">
+           <div class="col-md-6">
+             <div class="service-box mt-120px">
+               <div class="service-title">
+                 <h3>LANDING PAGE</h3>
+               </div>
+               <div class="service-desc">
+                 <div class="btn btn-primary">from €250</div>
+               </div>
+             </div>
+           </div>
+           <div class="col-md-6">
+             <div class="service-box mt-120px">
+               <div class="service-title">
+                 <p>Creating a single-page website with a specific goal - to attract attention and encourage users to take a specific action, such as subscribing to a newsletter, registering for an event, or making a product purchase.</p>
+               </div>
+             </div>
+           </div>
+         </div>
 
-      <!-- Зліва зображення, справа текст -->
-      <div class="col-md-6 pb-5 pt-120px">
-        <div class="d-flex">
-          <img src="icon.png" alt="Left Image" class="img-fluid mr-3 img-size">
-          <div>
-            <h3 class="text-white">Web Development</h3>
-            <p class="mb-0 text-white-50">Duo et verterem dissentiet, eu essent delenit meliore qui, eam ei novum volutpat deserunt.</p>
-          </div>
-        </div>
-      </div>
+         <div class="col-md-12 row-service">
+           <div class="col-md-6">
+             <div class="service-box pt-70px">
+               <div class="service-title">
+                 <h3>E-COMMERCE</h3>
+               </div>
+               <div class="service-desc">
+                 <div class="btn btn-primary">from €250</div>
+               </div>
+             </div>
+           </div>
+           <div class="col-md-6">
+             <div class="service-box pt-70px">
+               <div class="service-title">
+                 <p>
+                   Building an electronic platform for selling products or services online, with the capability to process orders, payments, and manage deliveries.
+                 </p>
+               </div>
+             </div>
+           </div>
+         </div>
 
-      <!-- Зліва зображення, справа текст -->
-      <div class="col-md-6 pb-5">
-        <div class="d-flex">
-          <img src="icon.png" alt="Left Image" class="img-fluid mr-3 img-size">
-          <div>
-            <h3 class="text-white">Another Skill</h3>
-            <p class="mb-0 text-white-50">Some text describing the third skill with the image on the left.</p>
-          </div>
-        </div>
+         <div class="col-md-12 row-service">
+           <div class="col-md-6">
+             <div class="service-box pt-70px">
+               <div class="service-title">
+                 <h3>REDESIGN</h3>
+               </div>
+               <div class="service-desc">
+                 <div class="btn btn-primary">from €150</div>
+               </div>
+             </div>
+           </div>
+           <div class="col-md-6">
+             <div class="service-box pt-70px">
+               <div class="service-title">
+                 <p>
+                   Updating and modernizing an existing website or design to enhance the user experience and improve its overall effectiveness.
+                 </p>
+               </div>
+             </div>
+           </div>
+         </div>
 
-      </div>
+         <div class="col-md-12 row-service">
+           <div class="col-md-6">
+             <div class="service-box pt-70px">
+               <div class="service-title">
+                 <h3>BRANDING</h3>
+               </div>
+               <div class="service-desc">
+                 <div class="btn btn-primary">negotiable</div>
+               </div>
+             </div>
+           </div>
+           <div class="col-md-6">
+             <div class="service-box pt-70px">
+               <div class="service-title">
+                 <p>
+                   Designing guides, checklists, and informational materials for your brand.
+                 </p>
+               </div>
+             </div>
+           </div>
+         </div>
 
-      <div class="col-md-6 pb-5">
-        <div class="d-flex">
-          <img src="icon.png" alt="Left Image" class="img-fluid mr-3 img-size">
-          <div>
-            <h3 class="text-white">Another Skill</h3>
-            <p class="mb-0 text-white-50">Some text describing the third skill with the image on the left.</p>
-          </div>
-        </div>
-      </div>
 
-      <div class="col-md-6 pb-5">
-        <div class="d-flex">
-          <img src="icon.png" alt="Left Image" class="img-fluid mr-3 img-size">
-          <div>
-            <h3 class="text-white">Another Skill</h3>
-            <p class="mb-0 text-white-50">Some text describing the third skill with the image on the left.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 pb-5">
-        <div class="d-flex">
-          <img src="icon.png" alt="Left Image" class="img-fluid mr-3 img-size">
-          <div>
-            <h3 class="text-white">Another Skill</h3>
-            <p class="mb-0 text-white-50">Some text describing the third skill with the image on the left.</p>
-          </div>
-        </div>
-      </div>
+       </div>
     </div>
   </div>
 </section>
