--- a/app/views/shared/_mobile_portfolio_section.html.erb
+++ b/app/views/shared/_mobile_portfolio_section.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1 class="text-center fw-bold text-9 pb-110px">Portfolio</h1>
     <div class="know-me-more-line"></div>
-    <div class="row pt-120px">
+    <div class="row mt-120px">
       <figure class="snip0078 blue">
         <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample4.jpg" alt="sampl45" />
         <figcaption>
