--- a/app/views/shared/_desktop_about_me_section.html.erb
+++ b/app/views/shared/_desktop_about_me_section.html.erb
@@ -1,11 +1,11 @@
 <section id="about-me" class="section-about-me" style="height: 800px;">
   <div class="container">
-    <h1 class="text-center know-me-more text-9 pb-110px">Know Me More</h1>
+    <h1 class="text-center know-me-more text-9 pb-110px" id="know-me-more">Know Me More</h1>
     <div class="know-me-more-line"></div>
     <div class="row">
       <!-- Ліва колонка -->
       <div class="col-lg-7 col-xl-8 text-left mt-120px">
-        <h2 class="know-me-more-h2">I'm <span class="home-color">Svitlana Lyzanets,</span> a Web Developer</h2>
+        <h2 class="know-me-more-h2" id="name">I'm <span class="home-color" id="color-name">Svitlana Lyzanets,</span> a Web Developer</h2>
         <p class="know-me-more-text">
           I am a designer with a fervent ambition to change the world through creativity. I always strive to develop designs that not only aesthetically attract but are also highly user-friendly and intuitively understandable for users. My goal is to transform your ideas into digital reality and assist you in achieving maximum success in your industry. Take a look at my works, and don't hesitate to reach out to me to embark on incredible projects together.
         </p>
