--- a/app/views/shared/_desktop_contact_section.html.erb
+++ b/app/views/shared/_desktop_contact_section.html.erb
@@ -1,4 +1,4 @@
-<section id="contact" style="height: 760px;" class="section-contact">
+<section id="contact" style="height: 360px;" class="section-contact">
   <div class="container">
     <div class="row">
       <div class="col-md-8 pt-100px">
@@ -8,7 +8,7 @@
       <div class="col-md-4 pt-200px">
         <div>
           <p>Open to new collaborations</p>
-          <p>lizanets.svitlana@gmail.com</p>
+          <p class="home-color">lizanets.svitlana@gmail.com</p>
           <div class="social-icons">
             <a href="https://t.me/Svitlana_Lyzanets" target="_blank"><i class="ml-0 fab fa-telegram"></i></a>
             <a href="https://www.instagram.com/svitlana_designer__/" target="_blank"><i class="ml-3 fab fa-instagram"></i></a>
