--- a/app/views/shared/_desktop_sidebar_html.erb
+++ b/app/views/shared/_desktop_sidebar_html.erb
@@ -25,9 +25,15 @@
       </li>
     </ul>
     <div id="language-select" class="language-select language">
-      <div class="flag fw-bold" onclick="changeLanguage('en')">EN</div>
-      <div class="flag fw-bold" onclick="changeLanguage('uk')">UK</div>
-      <div class="flag fw-bold" onclick="changeLanguage('sk')">SK</div>
+      <div class="flag fw-bold" onclick="changeLanguage('en')" data-lang="en">
+        EN
+      </div>
+      <div class="flag fw-bold" onclick="changeLanguage('uk')" data-lang="uk">
+        UK
+      </div>
+      <div class="flag fw-bold" onclick="changeLanguage('sk')" data-lang="sk">
+        SK
+      </div>
     </div>
 
   </div>
