--- a/app/views/shared/_desktop_first_section.html.erb
+++ b/app/views/shared/_desktop_first_section.html.erb
@@ -1,10 +1,9 @@
 <section id="home" style="height: 1060px; background-color: #000; background-size: cover;" class="section-1">
   <div class="container">
-    <h1 class="text-center typewriter-text first-section" lang="en">Design that Changes Everything: I'll Bring Your Ideas to Life and Help You Become Leaders in Your Industry.</h1>
+    <h1 class="text-center typewriter-text first-section" lang="en"></h1>
     <img src="first-section.png" style="width: 100%;">
-    <div class="text-center text-first-section mt-5" style="display: flex; align-items: center; justify-content: space-between;">
+    <div class="text-center text-first-section mt-5" id="info" style="display: flex; align-items: center; justify-content: space-between;">
       Design that Changes Everything: I'll Bring Your Ideas to Life and Help You Become Leaders in Your Industry.
-      <button class="scroll-btn">Hire Me</button>
     </div>
 
   </div>
